res/res_pjsip_caller_id.c
@@ -648,6 +648,7 @@ static void caller_id_outgoing_request(struct ast_sip_session *session, pjsip_tx
 
 	connected_id = ast_channel_connected_effective_id(session->channel);
 	if (session->inv_session->state < PJSIP_INV_STATE_CONFIRMED &&
+			ast_strlen_zero(session->endpoint->fromuser) &&
 			(session->endpoint->id.trust_outbound ||
 			((connected_id.name.presentation & AST_PRES_RESTRICTION) == AST_PRES_ALLOWED &&
 			(connected_id.number.presentation & AST_PRES_RESTRICTION) == AST_PRES_ALLOWED))) {
